<resources>
    <string name="app_name">客户看板系统</string>

    <!--<string name="api_base_url">http://erp.hansa-flex.com.cn/Hansa/services/cks</string>-->
    <string name="api_base_url">http://erp.hansa-flex.com.cn/HFTest/services/cks</string>
    <!--<string name="api_base_url">http://192.168.58.1:8888/api</string>-->
    <!--<string name="api_base_url">http://192.168.0.105:8888/api</string>-->
    <!--<string name="api_base_url">http://192.168.1.157:8888/api</string>-->
    <string name="api_app_id">88888888</string>
    <string name="api_secret_key">DgAewDold3V8fiUwxE0ANjjdinuQCSar</string>


    <string name="lab_login_info">用户名:%1$s   -   登录时间:%2$s</string>
    <string name="lab_customer_list">请选择要处理的客户</string>
    <string name="lab_password_change">修改密码</string>
    <string name="lab_order_query">订单查询</string>
    <string name="lab_stock_in">货物入库</string>
    <string name="lab_stock_out">货物出库</string>
    <string name="lab_stock_in_cancel">撤销入库</string>
    <string name="lab_stock_flow_query">出入库查询</string>

    <string name="lab_confirm_stock_in">确定入库</string>
    <string name="lab_confirm_stock_out">确定出库</string>
    <string name="lab_revoke_stock_in">撤销入库</string>

    <string name="lab_week">一周内</string>
    <string name="lab_month">一月内</string>
    <string name="lab_3_month">三月内</string>

    <string name="lab_version">(管理端)</string>

    <string name="lab_op_out">领料出库</string>
    <string name="lab_op_return">领料退回</string>
    <string name="lab_op_loss">盘亏</string>
    <string name="lab_op_exout">额外出库</string>


    <string name="lab_part_code">型号:</string>
    <string name="lab_part_sku">零件号:</string>
    <string name="lab_part_category">小类:</string>
    <string name="lab_part_stock">库存量:</string>
    <string name="lab_part_description">描述:</string>
    <string name="lab_part_location">工位:</string>
    <string name="lab_out_type">出库类型</string>
    <string name="lab_out_quantity">出库数量</string>
    <string name="lab_out_info"><![CDATA[<font color="#8B0000">类型:</font>%1$s <font color="#8B0000">工位:</font>%2$s]]></string>


    <!-- Strings related to login -->
    <string name="title_activity_login">登录</string>

    <string name="prompt_user">用户名</string>
    <string name="prompt_password">口令</string>
    <string name="action_sign_in">登录</string>
    <string name="action_logout"><u>退出</u></string>
    <string name="action_cancel_sign_in">取消</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_user">用户名无效</string>
    <string name="error_invalid_password">口令太短</string>
    <string name="error_incorrect_password">口令不正确</string>
    <string name="error_field_required">This field is required</string>
    <string name="device_register"><u>新设备注册</u></string>
    <string name="forget_password"><u>忘记密码</u></string>
    <string name="device_register_success">您的设备号已注册，请等待后台管理员审核通过后再登录</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_scan_part">单品出库</string>
    <string name="title_activity_stock_out">单品出库明细确认</string>
    <string name="title_activity_order">订单明细</string>
    <string name="title_activity_order_in">订单入库</string>
    <string name="title_activity_order_revoked">订单入库撤销</string>
    <string name="title_activity_order_query">订单查询</string>
    <string name="title_activity_flow_query">出入库查询</string>

    <string name="prompt_select_customer">选择客户</string>
    <string name="prompt_select_stock_type">选择出库类型</string>

    <string name="turn_on_flashlight">打开闪光灯</string>
    <string name="turn_off_flashlight">关闭闪光灯</string>
    <string name="scan_status_text">请扫描要出库的单品型号二维码</string>


    <string name="prompt_delete_item">删除记录？</string>
    <string name="prompt_delete">删除</string>

    <string name="prompt_stock_out_1"><![CDATA[<font color="#8B0000">共计:</font>%d项]]></string>
    <string name="prompt_stock_out_2"><![CDATA[<font color="#8B0000">总数量:</font>%d件]]></string>


    <string name="lab_input_order_no">请扫描或手工输入订单号</string>
    <string name="lab_input_location_no">请扫描或手工输入工位</string>
    <string name="hint_order_no">订单号</string>
    <string name="hint_order_times">次数</string>
    <string name="hint_location_no">工位</string>

    <string name="prompt_order">订单号:%1$s 发货次数:%2$d</string>

    <string name="prompt_order_no"><![CDATA[<font color="#8B0000">订单号:</font>%1$s-%2$d]]></string>
    <string name="prompt_order_location"><![CDATA[<font color="#8B0000">工位:</font>%s]]></string>
    <string name="prompt_order_total_amount"><![CDATA[<font color="#8B0000">总数量:</font>%d件]]></string>
    <string name="prompt_order_status"><![CDATA[<font color="#8B0000">状态:</font>%s]]></string>
    <string name="prompt_order_delivery_date"><![CDATA[<font color="#8B0000">发货日期:</font>%s]]></string>
    <string name="prompt_order_arrival_date"><![CDATA[<font color="#8B0000">到货日期:</font>%s]]></string>


    <string name="add">新增</string>
    <string name="reset">重置</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>

    <string name="loading">载入中...</string>


    <string name="pwd_change_password">密码修改</string>
    <string name="pwd_old_password">旧密码</string>
    <string name="pwd_new_password">新密码</string>
    <string name="pwd_retry_password">再输一遍</string>
    <string name="pwd_confirm">确认</string>
    <string name="pwd_err_invalid_retry_password">密码不一致</string>
    <string name="pwd_err_invalid_password">密码长度至少6位</string>


    <string name="prompt_select_begin_date">选择开始时间</string>
    <string name="prompt_select_end_date">选择结束时间</string>

    <string name="error_sever_exception">服务端异常</string>
    <string name="error_invalid_qrcode">无效的二维码</string>

    <string name="error_xxx">An error message</string>
    <string name="msg_xxx">A regular information message</string>
    <string name="title_xxx">A title, i.e. a dialog title</string>
    <string name="action_xxx">An action such as "Save" or "Create"</string>

    <string name="launcher_icon_dpi">m-160-48x48,h-240-72x72,xh-320-96x96,xxh-480-144x144,xxxh-640-192x192</string>
    <string name="action_dialog_tab_dpi">m-160-24x24,h-240-36x36,xh-320-48x48,xxh-480-72x72,xxxh-640-96x96</string>
    <string name="small_icon_dpi">m-160-16x16,h-240-24x24,xh-320-32x32,xxh-480-48x48,xxxh-640-64x64</string>

</resources>
