<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wang.laic.kanban.MainActivity">

    <include layout="@layout/header" />

    <View
        android:id="@+id/v_line"
        android:layout_below="@+id/ll_login_zone"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/ll_customer_zone"
        android:layout_below="@+id/v_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_customers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_customer_list"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />

        <Spinner
            android:id="@+id/spinner_customers"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:spinnerMode="dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/prompt_select_customer"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp" />
    </LinearLayout>

    <android.support.v7.widget.GridLayout
        android:layout_below="@+id/ll_customer_zone"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:orientation="horizontal"
        app:columnCount="2"
        app:rowCount="3"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_change_password"
            style="@style/MainButton"
            android:drawableTop="@drawable/main_password_change"
            android:text="@string/lab_password_change" />

        <Button
            android:id="@+id/btn_query_order"
            style="@style/MainButton"
            android:drawableTop="@drawable/main_order_query"
            android:text="@string/lab_order_query" />

        <Button
            android:id="@+id/btn_in_order"
            style="@style/MainButton"
            android:drawableTop="@drawable/main_order_in"
            android:text="@string/lab_stock_in" />

        <Button
            android:id="@+id/btn_revoked_order"
            style="@style/MainButton"
            android:drawableTop="@drawable/main_order_revoked"
            android:text="@string/lab_stock_in_cancel" />

        <Button
            android:id="@+id/btn_out_goods"
            style="@style/MainButton"
            android:drawableTop="@drawable/main_stock_out"
            android:text="@string/lab_stock_out" />

        <Button
            android:id="@+id/btn_query_flow"
            style="@style/MainButton"
            android:drawableTop="@drawable/main_flow_query"
            android:text="@string/lab_stock_flow_query" />

    </android.support.v7.widget.GridLayout>

</RelativeLayout>
