<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context="wang.laic.kanban.ScanPartActivity">


    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/barcode_scanner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/gl_part_info"
        android:layout_alignParentTop="true"/>
        <!--app:zxing_scanner_layout="@layout/custom_barcode_scanner"-->
        <!--app:zxing_preview_scaling_strategy="fitXY"-->
        <!--app:zxing_use_texture_view="true"/>-->

    <GridLayout
        android:id="@+id/gl_part_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_above="@+id/rg_op_type"
        android:background="@drawable/rectangle_border"
        android:columnCount="4"
        android:rowCount="4">

        <TextView
            android:layout_gravity="right"
            android:text="@string/lab_part_code"/>

        <TextView
            android:layout_gravity="fill"
            android:id="@+id/tv_part_model"
            android:layout_columnSpan="3"/>

        <TextView
            android:layout_gravity="right"
            android:text="@string/lab_part_sku"/>

        <TextView
            android:layout_gravity="fill"
            android:id="@+id/tv_part_no"
            android:layout_columnSpan="3" />

        <TextView
            android:layout_gravity="right"
            android:text="@string/lab_part_category"/>

        <TextView
            android:layout_gravity="fill"
            android:id="@+id/tv_part_category"
            android:layout_columnSpan="3" />

        <TextView
            android:layout_gravity="right"
            android:text="@string/lab_part_stock"/>

        <TextView
            android:layout_gravity="fill"
            android:id="@+id/tv_part_stock"
            android:layout_columnSpan="3" />
    </GridLayout>

    <RadioGroup
        android:id="@+id/rg_op_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/ll_action_zone"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_op_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_op_out"
            android:onClick="onOpRadioButtonClicked"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_op_loss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_op_loss"
            android:onClick="onOpRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radio_op_exout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_op_exout"
            android:onClick="onOpRadioButtonClicked" />
    </RadioGroup>

    <EditText
        android:id="@+id/et_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_action_zone"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/rg_op_type"
        android:layout_marginLeft="12dp"
        android:gravity="center"
        android:maxLines="1"
        android:inputType="number"
        android:hint="@string/lab_out_quantity" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/ll_action_zone">

        <Button
            android:id="@+id/btn_resume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="添加并继续扫描" />

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="确认提交" />
    </LinearLayout>

</RelativeLayout>
