<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wang.laic.kanban.ScanLocationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/rg_op_type"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:maxLines="1"
            android:layout_weight="1"
            android:hint="@string/hint_location_no"/>

        <ImageButton
            android:id="@+id/scannerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="12dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/barcode_scanner" />

    </LinearLayout>


    <RadioGroup
        android:id="@+id/rg_op_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_marginRight="8dp">

        <RadioButton
            android:id="@+id/radio_op_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_op_out"
            android:onClick="onOpRadioButtonClicked"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_op_loss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_op_loss"
            android:onClick="onOpRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radio_op_exout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_op_exout"
            android:onClick="onOpRadioButtonClicked" />
    </RadioGroup>


    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_op_type"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/pwd_confirm" />

</RelativeLayout>
