<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wang.laic.kanban.PasswordActivity">



    <EditText
        android:id="@+id/old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/new_password"
        android:layout_marginRight="32dp"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/old_password"
        android:layout_toLeftOf="@id/old_password"
        android:layout_marginRight="16dp"
        android:text="@string/pwd_old_password"/>

    <EditText
        android:id="@+id/new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/retry_password"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/new_password"
        android:layout_toLeftOf="@+id/new_password"
        android:layout_marginRight="16dp"
        android:text="@string/pwd_new_password"/>


    <EditText
        android:id="@+id/retry_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/retry_password"
        android:layout_toLeftOf="@+id/retry_password"
        android:layout_marginRight="16dp"
        android:text="@string/pwd_retry_password"/>


    <Button
        android:id="@+id/confir_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/retry_password"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:text="@string/pwd_confirm"/>

</RelativeLayout>
