<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wang.laic.kanban.FlowActivity">

    <LinearLayout
        android:id="@+id/queryZone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_item_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="输入型号或扫码"/>

            <ImageButton
                android:id="@+id/scannerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="12dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/barcode_scanner" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_begin_date"
                android:layout_weight="2"
                android:text="@string/prompt_select_begin_date"
                android:textColor="#b00000ff"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_end_date"
                android:layout_weight="2"
                android:text="@string/prompt_select_end_date"
                android:textColor="#b00000ff"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/search"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="检索" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_date_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lab_week"
                android:onClick="onDateRangeRadioButtonClicked"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radio_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lab_month"
                android:onClick="onDateRangeRadioButtonClicked" />

            <RadioButton
                android:id="@+id/radio_3_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lab_3_month"
                android:onClick="onDateRangeRadioButtonClicked" />

        </RadioGroup>
        
    </LinearLayout>


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/queryZone"
        android:background="#0000cc" >

        <TextView
            style="@style/ListCell"
            android:layout_weight = "2"
            android:text = "日期" />

        <TextView
            style="@style/ListCell"
            android:layout_weight = "1.5"
            android:text = "类型" />

        <TextView
            style="@style/ListCell"
            android:layout_weight = "1"
            android:text = "数量" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id = "@+id/rv_flow_list"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:layout_below="@id/header"
        android:scrollbars="vertical"
        android:divider = "@null"/>

</RelativeLayout>
